# mobius

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  biome.json  bunfig.toml  install.sh  justfile  mobius.config.yaml  package-lock.json  package.json  release-please-config.json
.claude/: settings.json
.claude/commands/linear/: define.md  execute.md  refine.md  verify.md
.claude/skills/agent-gen/: SKILL.md
.claude/skills/define/: SKILL.md
.claude/skills/define-issue/: SKILL.md
.claude/skills/define-linear-issue/: SKILL.md
.claude/skills/execute/: SKILL.md
.claude/skills/execute-issue/: SKILL.md
.claude/skills/execute-linear-issue/: SKILL.md
.claude/skills/pr/: RESEARCH.md  SKILL.md
.claude/skills/refine/: SKILL.md  parallel-research.md
.claude/skills/refine-issue/: SKILL.md  parallel-research.md
.claude/skills/refine-linear-issue/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/verify-issue/: SKILL.md
.claude/skills/verify-linear-issue/: SKILL.md
.github/workflows/: build-rust.yml  ci.yml  npm-publish.yml  release-please.yml
.husky/: pre-commit
.mobius/issues/MOB-241/: context.json
.opencode/skills/execute/: SKILL.md
.opencode/skills/refine/: SKILL.md
.opencode/skills/verify/: SKILL.md
assets/diagrams/src/: architecture.mmd  execution-loop.mmd  tui.mmd  workflow-lifecycle.mmd  workflow.mmd
assets/terminal/tapes/: completion.tape  execution.tape  setup.tape  workflow-demo.tape
docs/plans/: mob-264-ci-runner-migration.md
docs/plans/opencode-decoupling/: 00-scope-and-decisions.md  01-implementation-tasks.md  02-test-and-rollout-checklist.md  03-skill-compatibility.md  (+1 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/mobius/: Cargo.toml
rust/mobius/src/: context.rs  debug_logger.rs  executor.rs  git_lock.rs  jira.rs  linear.rs  local_state.rs  loop_command.rs  main.rs  mermaid_renderer.rs  output_parser.rs  project_detector.rs  runtime_adapter.rs  status_sync.rs  stream_json.rs  tmux.rs  tracker.rs  tree_renderer.rs  worktree.rs
rust/mobius/src/commands/: clean.rs  config.rs  doctor.rs  list.rs  loop_cmd.rs  mod.rs  pull.rs  push.rs  run.rs  set_id.rs  setup.rs  shortcuts.rs  submit.rs  tree.rs
rust/mobius/src/config/: error.rs  loader.rs  mod.rs  paths.rs  setup.rs
rust/mobius/src/tui/: agent_progress.rs  agent_slots.rs  app.rs  backend_status.rs  dashboard.rs  debug_panel.rs  events.rs  exit_modal.rs  header.rs  legend.rs  mod.rs  task_tree.rs  theme.rs  token_metrics.rs
rust/mobius/src/types/: config.rs  context.rs  debug.rs  enums.rs  mod.rs  task_graph.rs
scripts/: capture-agent-todos.sh  ci-runtime-benchmark.sh  mobius.sh  render-diagrams.sh  render-terminal.sh  shortcuts.sh
src/: types.ts
src/commands/: clean.ts  config.ts  doctor.ts  dual-loop.e2e.test.ts  list.ts  loop.test.ts  loop.ts  pull.ts  push.ts  run.ts  set-id.ts  setup.test.ts  setup.ts  shortcuts.test.ts  shortcuts.ts  submit.ts  sync.ts  tree.ts
src/lib/: backend-sync.integration.test.ts  cli-installer.ts  config.test.ts  config.ts  context-generator.test.ts  context-generator.ts  debug-logger.ts  execution-state.ts  execution-tracker.test.ts  execution-tracker.ts  git-lock.test.ts  git-lock.ts  jira.test.ts  jira.ts  linear.test.ts  linear.ts  local-state.test.ts  local-state.ts  mermaid-renderer.ts  output-parser.test.ts  output-parser.ts  parallel-agents.integration.test.ts  parallel-executor.test.ts  parallel-executor.ts  parallel-state.integration.test.ts  paths.ts  platform-detect.ts  project-detector.test.ts  project-detector.ts  state-pane-coordination.integration.test.ts  status-sync.ts  task-graph.test.ts  task-graph.ts  tmux-display.test.ts  tmux-display.ts  tree-renderer.ts  worktree-isolation.e2e.test.ts  worktree.test.ts  worktree.ts
src/tui/: events.ts  theme.ts  tui-reloop.e2e.test.ts
src/types/: context.ts  debug.ts
templates/: AGENTS.md
(+27 files in other folders)
