[workspace]
members = ["mobius"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"
version = "1.6.0"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
graphql_client = { version = "0.14", features = ["reqwest"] }
git2 = "0.19"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
libc = "0.2"
tempfile = "3"
