[workspace]
members = ["mobius"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"
version = "1.6.0"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
libc = "0.2"
tempfile = "3"
colored = "2"
regex = "1"
futures = "0.3"
dialoguer = "0.11"
indicatif = "0.17"
which = "7"
base64 = "0.22"
ctrlc = "3.4"
