[package]
name = "mobius"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "mobius"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
graphql_client = { workspace = true }
git2 = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
colored = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
